# rusty_mb2_template_blink_embassy

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
