[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
cortex-m-rt = "0.7.0"
microbit-bsp = "0.3.0"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

[dependencies.embassy-executor]
version = "0.5.0"
features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"]

[dependencies.embassy-time]
version = "0.3.0"
features = ["defmt"]

[dependencies.embassy-nrf]
version = "0.1.0"
features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio"]

[dependencies.cortex-m]
version = "0.7.0"
features = ["critical-section-single-core"]

[dependencies.panic-probe]
version = "0.3.0"
features = ["print-defmt"]

[profile.release]
debug = 2
